k8s/manifests/01-namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devhub
